<resources>
    <string name="app_name">米屋</string>
    <string name="login_bar">登录</string>
    <string name="login_edit_user">账号/手机号/邮箱</string>
    <string name="login_edit_pwd">密码</string>
    <string name="user_btn_login">登录</string>
    <string name="qrcode_btn_login">扫码登录</string>
    <string name="pw_btn_login">账号密码登录</string>
    <string name="tile_description">快捷操作</string>
    <string name="edit_favorite">修改收藏</string>
    <string name="toast_user_pwd_not_null">账号密码不能为空</string>
    <string name="toast_login_failure">登录失败,请检查账号密码是否正确</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_logging_in">登录中</string>
    <string name="device_tv_empty">暂不支持完整功能\n请持续关注后续版本</string>
    <string name="device_online">设备在线</string>
    <string name="device_offline">设备离线</string>
    <string name="loading">加载中</string>
    <string name="scene">场景</string>
    <string name="more">更多</string>
    <string name="device">设备</string>
    <string name="avatar">头像</string>
    <string name="uid">账号</string>
    <string name="nickname">姓名</string>switchHome
    <string name="switch_home">切换家庭</string>
    <string name="help_title">使用帮助</string>
    <string name="crash_log">闪退日志</string>
    <string name="exit_account">退出账号</string>
    <string name="goto_license">关于米屋</string>
    <string name="scene_tip">当前家庭暂无场景</string>
    <string name="scene_small_tip">打开手机端应用添加场景</string>
    <string name="device_tip">当前家庭暂无设备</string>
    <string name="device_small_tip">打开手机端应用添加设备</string>
    <string name="device_opened">已开启</string>
    <string name="device_closed">已关闭</string>
    <string name="Straight">直吹风</string>
    <string name="Natural">自然风</string>
    <string name="Smart">智能风</string>
    <string name="Sleep">睡眠风</string>
    <string name="Level1">1 档</string>
    <string name="Level2">2 档</string>
    <string name="Level3">3 档</string>
    <string name="Level4">4 档</string>
    <string name="Auto">自动</string>
    <string name="Cool">制冷</string>
    <string name="Dry">除湿</string>
    <string name="Heat">制热</string>
    <string name="Fan">送风</string>
    <string name="Low">低速</string>
    <string name="LowFood">即将见底</string>
    <string name="EmptyFood">已经没得吃了</string>
    <string name="Medium">中速</string>
    <string name="High">高速</string>
    <string name="home_desc">%1$s个房间/%2$s个设备</string>
    <string name="home_desc_share">共享家庭</string>
    <string name="about">关于</string>
    <string name="license_content">一. 本开源项目仅供个人学习交流使用, 方便 Android 手表端可以控制米家的智能家居.\n二. 本项目完全免费, 可能存在较多漏洞, 维护者仅保证自己能正常使用, 存在问题请通过项目页 Issues 反馈.\n三. 本项目中所有适配的接口均来自小米公司 (北京小米科技有限责任公司) 旗下米家 (MIJIA), 本项目不对其控制的安全性负责.\n四. 本项目会将账户、密码、家庭等信息, 缓存在安装设备本地, 不含任何上传个人信息的接口.\n五. 真诚希望小米官方能够推出 `米家 For Android Watch`, 使广大消费者能用上.\n六. 本项目仅供个人学习交流使用, 切勿进行传播、任何形式的盈利, 未涉及的问题请参见国家有关法律法规, 以国家法律法规为准.\n\n项目仓库地址:\nhttps://github.com/sky130/MiWu</string>
    <string name="logging_in">正在登录</string>
    <string name="miwu">米屋</string>
    <string name="unofficial_mihome_app">第三方手表版米家</string>
    <string name="license_for_use">免责声明</string>
    <string name="github_url">https://github.com/sky130/MiWu</string>
    <string name="crash_test">com.github.miwu.ui.crash.model.CrashItemKt.main(CrashItem.kt:22)\ncom.github.miwu.ui.crash.model.CrashItemKt.main(CrashItem.kt)</string>
    <string name="app_url_text">仓库项目地址</string>
    <string name="start_charge">开始回充</string>
    <string name="start_clean">开始清洁</string>
    <string name="check_crash">可至仓库 Issues 页寻求帮助\n下面是最新的一份闪退日志</string>
    <string name="crash_path">日志保存路径:</string>
    <string name="feed_num">%1$s份 (约 %2$sg)</string>
    <string name="auto_feed_plan">自动喂食计划</string>
    <string name="Normal">正常</string>
    <string name="miwu_tips">请一直左滑探索应用</string>
    <string name="miwu_tips_edit">请在应用中收藏设备</string>
    <string name="miwu_no_device">暂无收藏设备</string>
    <string name="must_to_read">登录后默认已同意</string>
    <string name="plz_user_mi_app_scan_qrcode">请使用米家等\n小米旗下应用扫码登录</string>

    <string name="qa_login">遇到问题?</string>

    <string name="login_by_mi">使用小米账号登录至米屋</string>
    <string name="enabled">已开启</string>
    <string name="all_home">全屋</string>
    <string name="disabled">已关闭</string>
    <string name="Temperature">温度</string>
    <string name="relative_humidity">相对湿度</string>
    <string name="battery">电池电量</string>
    <string name="pet_food_out">喂食机出粮</string>
    <string name="dev_desc">有可能损坏米屋的应用结构\n如不清楚如何使用请退出</string>
    <string name="dev_mode">开发者模式</string>
    <string name="login_failure_toast">登录失败,原因可能为%s</string>
    <string name="login_qr_code">登录二维码</string>
    <string name="network_error_plz_check">网络错误, 请检查网络后再试</string>
    <string name="auth_expired_plz_login_again">登录过期, 请重新登录</string>
    <string name="add_to_tile">添加到卡片</string>
    <string name="favorite_device">收藏设备</string>
    <string name="device_favorited">已收藏</string>
    <string name="device_unfavorited">取消收藏</string>
    <string name="no_room">暂无房间</string>
    <string name="room_tip">打开手机端添加房间</string>
    <string name="current_room_no_devices">当前房间无设备</string>
    <string name="room">房间</string>
    <string name="current_not_support">当前设备暂未适配</string>
</resources>
