<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.miwu.ui.login.LoginViewModel" />

        <variable
            name="activity"
            type="com.github.miwu.ui.login.LoginActivity" />
    </data>

    <FrameLayout style="@style/Wear.Frame">

        <ScrollView
            android:id="@+id/scroll"
            style="@style/Wear.Scroll">

            <LinearLayout style="@style/Wear.Linear">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:importantForAccessibility="no"
                    android:maxHeight="62dp"
                    android:src="@drawable/ic_miwu_round" />

                <TextView
                    style="@style/Wear.Text"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_by_mi" />

                <LinearLayout
                    android:id="@+id/user_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:isVisible="@{!activity.showQrCode}"
                    tools:visibility="gone">

                    <EditText
                        style="@style/Miwu.EditView"
                        android:hint="@string/login_edit_user"
                        android:inputType="text"
                        android:text="@={viewModel.user}" />

                    <EditText
                        style="@style/Miwu.EditView"
                        android:layout_marginTop="10dp"
                        android:hint="@string/login_edit_pwd"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        tools:ignore="WearPasswordInput" />

                    <Button
                        style="@style/Wear.NormalButton"
                        android:layout_marginTop="10dp"
                        android:onClick="@{() -> viewModel.requestClassicLogin()}"
                        android:text="@string/user_btn_login" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:isVisible="@{activity.showQrCode}"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/qrcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/login_qr_code"
                        android:onClick="@{() -> viewModel.requestQRCodeLogin()}"
                        tools:src="@drawable/qr_code_stub" />

                    <TextView
                        style="@style/Wear.Text"
                        android:layout_marginTop="10dp"
                        android:lineSpacingExtra="-4dp"
                        android:text="@string/plz_user_mi_app_scan_qrcode" />

                </LinearLayout>

                <Button
                    style="@style/Wear.NormalButton"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> activity.changeDisplayMode()}"
                    android:text="@{!activity.showQrCode ? @string/qrcode_btn_login : @string/pw_btn_login}"
                    tools:text="@string/pw_btn_login" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        style="@style/Wear.Text"
                        android:text="@string/must_to_read" />

                    <TextView
                        style="@style/Wear.Text"
                        android:onClick="@{() -> activity.startLicenseActivity()}"
                        android:text="@string/license_for_use"
                        android:textColor="@color/mi_green" />
                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    style="@style/Wear.Text"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> activity.startHelpActivity()}"
                    android:text="@string/qa_login"
                    android:textColor="@color/mi_green" />

            </LinearLayout>
        </ScrollView>

        <com.github.miwu.view.AppTitleBar
            style="@style/Wear.TitleBar"
            app:back="false"
            app:title="@string/login_bar" />
    </FrameLayout>
</layout>